Include \u{fe0f} unicode variation selector scalar

--- a/Source/Assets/ISEmojiList.plist
+++ b/Source/Assets/ISEmojiList.plist
@@ -784,9 +784,9 @@
 		<string>®</string>
 		<string>™</string>
 		<string>❌</string>
-		<string>‼</string>
-		<string>⁉</string>
-		<string>❗</string>
+		<string>‼️</string>
+		<string>⁉️️</string>
+		<string>❗️</string>
 		<string>❓</string>
 		<string>❕</string>
 		<string>❔</string>
